projects/maison/src/apps/budibase/budibase.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: budibase-websecure
  namespace: budibase
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - budibase.chezmoi.sh
  rules:
    - backendRefs:
        - name: proxy-service
          port: 10000
